# aibrix

benchmarks/: benchmark.py  config.yaml  config_utils.py  generate_config.py  pyproject.toml  run_manager.py  run_multi_service.py  run_outputs.py
benchmarks/client/: analyze.py  client.py
benchmarks/configs/: base.yaml  models.yaml  providers.yaml  runs.yaml  services.yaml
benchmarks/generator/dataset_generator/: multiturn_prefix_sharing_dataset.py
benchmarks/generator/workload_generator/: sample_request.py  workload_generator.py
scripts/: analyze_capacity_availability.py  instance_availability_scheduler.py
