[project]
name = "benchmarks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "certifi>=2025.1.31",
    "httpx==0.27.2",
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "openai==1.51.2",
    "pandas==2.2.3",
    "scipy>=1.15.2",
    "transformers==4.45.2",
    "requests==2.27.1",
    "vllm==0.6.3",
]
